<resources>
    <string name="app_name">ATHWAS Driver</string>

    <string name="settings">Go to setting</string>
    <string name="not_now">Not Now</string>
    <string name="instructions_to_turn_on_location_permission">You need to enable location permission to make the app working. Please go to setting and enable it.</string>
    <string name="unable_fetch_location">Unable to fetch your current location</string>
    <string name="proceed">Proceed</string>

    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="choose_image">Choose Image</string>
    <string name="search_by_keywords">Search by keywords</string>
    <string name="what_are_looking_for">What are you looking for?</string>
    <string name="shop_by_category">Shop by Category</string>
    <string name="no_order_assigned_yet">No Orders Assigned yet</string>
    <string name="no_item_available">No Data Found!!</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="pack_size">Pack Size</string>
    <string name="size">Size</string>
    <string name="see_all_offers">See all Offers</string>
    <string name="about_product">About Product</string>
    <string name="similar_product">Similar Product</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="price">Price</string>
    <string name="min_price">Min. Price</string>
    <string name="max_price">Max. Price</string>
    <string name="customer_rating">Customer Rating</string>
    <string name="categroy">Category</string>
    <string name="sub_category">Sub-Category</string>
    <string name="brand">Brand</string>
    <string name="apply_filter">Apply Filters</string>
    <string name="sort_by">Sort By</string>
    <string name="popularity">Popularity</string>
    <string name="price_low_to_high">Price - Low to High</string>
    <string name="price_high_to_low">Price - High to Low</string>
    <string name="newest_first">Newest First</string>
    <string name="choose_address">Choose Address</string>
    <string name="add_new_address">Add New Address</string>
    <string name="floor_no">"Floor / Apartment No. / House No. (Optional) "</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="others">Others</string>
    <string name="save">Save</string>
    <string name="my_orders">My Orders</string>
    <string name="current_orders">Current Orders</string>
    <string name="past_orders">Past Orders</string>
    <string name="order_id">Order ID:</string>
    <string name="order_date_and_time">Order date and time:</string>
    <string name="delivery_date_and_time">Delivery date and time:</string>
    <string name="payment_mode">Payment Mode:</string>
    <string name="payable_amount">Payable Amount:</string>
    <string name="paid_amount">Paid Amount:</string>
    <string name="my_wallet">My Wallet</string>
    <string name="wallet">Wallet</string>
    <string name="add_money">Add Money</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="apply">Apply</string>
    <string name="select_payment_option">Select Payment Option</string>
    <string name="credit_card">Credit Card</string>
    <string name="debit_card">Debit Card</string>
    <string name="netbanking">Netbanking</string>
    <string name="profile">Profile</string>
    <string name="wallet_statement">Wallet Statement</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="wish_list">Wish List</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="logout">Logout</string>
    <string name="upload_your_image">Upload your image</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_address">Email Address</string>
    <string name="change_password"><u>Change Password</u></string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password_wo_">Change Password</string>
    <string name="change_your_password">Change Your Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="submit">Submit</string>
    <string name="favourite_product">Favorite Products</string>
    <string name="done">Done</string>
    <string name="size_value">Size: %s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="my_account">My Account</string>
    <string name="notifications">Notifications</string>
    <string name="subscription">Subscription</string>
    <string name="faq">FAQ</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="login">Login</string>
    <string name="please_login_to_continue">Please Login to Continue</string>
    <string name="email_mobile_number">Email/Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="online">Online</string>
    <string name="orders">Orders</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="enter_your_registered_mobile_number_to_n_reset_your_password">Enter your registered mobile number or Email to reset your password</string>
    <string name="send">Send</string>
    <string name="reset_password">Reset Password</string>
    <string name="verification_code">Verification Code</string>
    <string name="please_enter_four_digit_otp">Please enter 4 digits OTP</string>
    <string name="dashes">-</string>
    <string name="set_your_new_password">Set Your New Password</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="select_date">Select Date</string>
    <string name="order_status">Order Status</string>
    <string name="updte_order_status">Update Order Status</string>
    <string name="picked_up">Picked Up</string>
    <string name="in_transit">In Transit</string>
    <string name="cash_received">Cash received if its COD</string>
    <string name="cash_received_title">Cash Received</string>
    <string name="completed">Completed</string>
    <string name="cod">COD</string>
    <string name="manage_order_status">Manage Order Status</string>
    <string name="order_detail">Order Detail</string>
    <string name="actual_price">Actual Price</string>
    <string name="offer_discount">Offer Discount</string>
    <string name="total_payable">Total Payable</string>
    <string name="enter_reason_here">Enter your description here...</string>
    <string name="please_enter_email_or_mobile_number">Please enter phone number or email</string>
    <string name="mobile_number_validation_msg">Mobile number should be at least between 7 to 15 characters</string>
    <string name="name_validation_msg">3 to 30 characters allowed!</string>
    <string name="vehicle_number_validation_msg">Vehicle number should be at least between 2 to 15 characters</string>
    <string name="name_valid_msg">Only Characters Allowed</string>
    <string name="password_validation_msg">Password should be at least between 6 to 15 characters</string>
    <string name="old_password_validation_msg">Old password should be at least between 6 to 15 characters</string>
    <string name="new_password_validation_msg">New password should be at least between 6 to 15 characters</string>
    <string name="confirm_password_validation_msg">Confirm Password should be at least between 6 to 15 characters</string>
    <string name="confirm_new_matched_validation_msg">Confirm Password should be same as new password</string>
    <string name="please_enter_valid_otp">Please enter valid OTP.</string>
    <string name="please_enter_otp">Please enter OTP.</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_valid_mobile_no">Enter a valid mobile number</string>
    <string name="enter_valid_email_address">Please enter valid email address</string>
    <string name="otp">Verify Otp</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive otp</string>
    <string name="expiring_in">Expiring in %s</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="logout_alert">Are you sure you want to logout?</string>
    <string name="title">Title</string>
    <string name="enter_conform_password">Enter confirm password</string>
    <string name="edit">Edit</string>
    <string name="please_enter_mobile_number">Please enter mobile number</string>
    <string name="please_enter_email_address">Please enter email address</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_vehicle_number">Please enter vehicle number</string>

    <string name="please_enter_old_password">Please enter old password</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="password_confirm_password_same">Password and confirm password should be same</string>
    <string name="password_should_be_min_6_char">Password must be 6 to 20 characters.</string>
    <string name="invalid_password_format">No spaces allowed in password</string>
    <string name="confirm_password_should_be_same_as_new_password">Confirm Password should be same as new password.</string>
    <string name="otp_sent_on_mobile_or_email">OTP has been sent to your mobile number or email address. Please verify</string>
    <string name="verify">Verify</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_want_to_delete_notification">Are you sure you want to delete notification?</string>
    <string name="delete_all_notification_msg">Are you sure you want to delete all notifications?</string>
    <string name="delivered">Total No. of Delivered Orders:</string>
    <string name="total_orders">Total Orders:</string>
    <string name="select_order_status">Select Order Status</string>
    <string name="order_id_value">#%s</string>
    <string name="order_amount_value">₹%s</string>
    <string name="status_delivered">Delivered</string>
    <string name="status_not_delivered">Not Delivered</string>
    <string name="total_not_delivered">Total No. of Not Delivered Orders:</string>
    <string name="product_amount">Product Amount</string>
    <string name="order_history">Order History</string>
    <string name="order_stats">Order Status</string>
    <string name="offline">Offline</string>
    <string name="ssl_error_title">SSL Certificate Error</string>
    <string name="ssl_untrusted">The certificate authority is not trusted.</string>
    <string name="ssl_expired">The certificate has expired.</string>
    <string name="ssl_id_mismatch">The certificate Hostname mismatch.</string>
    <string name="ssl_not_yet_valid">The certificate is not yet valid.</string>
    <string name="ssl_do_you_want_continue">" Do you want to continue anyway?"</string>
    <string name="remove_location_updates">Remove location updates</string>
    <string name="launch_activity">Launch App</string>
    <string name="inr_price">₹%1$s</string>
</resources>