<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/design_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/top_rounded_corner_primary">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/linotte_bold"
                android:text="@string/filter"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:padding="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/linotte_semi_bold"
                android:text="@string/cancel"
                android:textColor="@color/colorAccent"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/relMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/consHeader"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:paddingBottom="@dimen/_12sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSelectDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/linotte_semi_bold"
                android:text="@string/select_date"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintBottom_toTopOf="@+id/llDateValue"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llDateValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSelectDate">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_weight=".5"
                    android:background="@drawable/edittext_bg"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtTextStartDate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:hint="@string/start_date"
                        android:inputType="number"
                        android:editable="false"
                        android:clickable="true"
                        android:ems="10"
                        android:focusable="false"
                        android:maxLines="1"
                        android:padding="@dimen/_10sdp"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/_10sdp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight=".5"
                    android:editable="false"
                    android:ems="10"
                    android:focusable="false"
                    android:background="@drawable/edittext_bg"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtTextEndDate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:hint="@string/end_date"
                        android:inputType="number"
                        android:maxLines="1"
                        android:editable="false"
                        android:clickable="true"
                        android:ems="10"
                        android:focusable="false"
                        android:padding="@dimen/_10sdp"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/_10sdp" />

                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_below="@+id/consPrice"
            app:fontFamily="@font/linotte_regular"
            app:layout_constraintBottom_toTopOf="@+id/llPriceValue"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llPriceValue"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="horizontal"
            android:layout_below="@+id/tvPrice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPrice">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtTextMinPrice"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_weight=".5"
                android:background="@drawable/edittext_bg"
                android:hint="@string/min_price"
                android:inputType="number"
                android:maxLines="1"
                android:padding="@dimen/_10sdp"
                android:textAlignment="viewStart"
                android:textSize="@dimen/_10sdp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtTextMaxPrice"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:background="@drawable/edittext_bg"
                android:hint="@string/max_price"
                android:inputType="number"
                android:maxLines="1"
                android:padding="@dimen/_10sdp"
                android:textAlignment="viewStart"
                android:textSize="@dimen/_10sdp" />

        </androidx.appcompat.widget.LinearLayoutCompat>



        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_below="@+id/consPrice">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/linotte_semi_bold"
                android:text="@string/select_order_status"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/edittext_bg">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtTextOrderStatus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/order_status"
                    android:inputType="text"
                    android:maxLines="1"
                    android:editable="false"
                    android:clickable="true"
                    android:ems="10"
                    android:focusable="false"
                    android:drawableEnd="@drawable/ic_drop_down"
                    android:padding="@dimen/_10sdp"
                    android:textSize="@dimen/_10sdp"
                    android:layout_gravity="center" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonApplyFilter"
        style="@style/AddToCartButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_32sdp"
        android:text="@string/apply_filter"
        android:layout_below="@+id/relMain"/>
</RelativeLayout>