<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.app.ia.driver.image_picker.ImageDialogViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="60dp"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_3sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/choose_image"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                app:fontFamily="@font/linotte_bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgViewClose"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:padding="@dimen/_10sdp"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_close" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/light_grey" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:onClick="@{ () -> viewModel.onCameraClick()}"
            android:padding="@dimen/_10sdp"
            android:text="@string/camera"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/light_grey" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:onClick="@{ () -> viewModel.onGalleryClick()}"
            android:padding="@dimen/_10sdp"
            android:text="@string/gallery"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>