<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.app.ia.driver.ui.order_status.OrderStatusActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.app.ia.driver.ui.contact_us.ContactUsViewModel" />

    </data>

    <RelativeLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:focusableInTouchMode="true"
        android:focusable="true">

        <FrameLayout
            android:id="@+id/topBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="@dimen/_100sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </FrameLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp">

            <include
                layout="@layout/common_header"
                app:viewModel="@{viewModel}" />

        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:background="@color/white"
            android:fillViewport="true"
            android:scrollbars="none">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_16sdp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:background="@drawable/edittext_bg"
                    android:orientation="horizontal">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@null"
                        android:hint="@string/title"
                        android:inputType="text"
                        android:maxLength="12"
                        android:maxLines="1"
                        android:padding="@dimen/_10sdp"
                        android:textSize="@dimen/_10sdp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:background="@drawable/edittext_bg"
                    android:orientation="horizontal">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtTextDescription"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_150sdp"
                        android:layout_gravity="center"
                        android:background="@null"
                        android:gravity="top"
                        android:hint="@string/enter_reason_here"
                        android:inputType="textMultiLine"
                        android:maxLength="12"
                        android:maxLines="1"
                        android:padding="@dimen/_10sdp"
                        android:textSize="@dimen/_10sdp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonSubmit"
                    style="@style/AddToCartButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:background="@drawable/logout_button_bg"
                    android:text="@string/submit" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </ScrollView>

    </RelativeLayout>
</layout>